docs/7.52/md/abenamdp_abexas.md
---
title: "AMDP - Examples"
description: |
  !Example(exa.gif 'Example') AMDP, Implementation of a SQLScript Procedure(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_abexa.htm) !Example(exa.gif 'Example') AMDP, Calling an AMDP Procedure from SQLScript(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abena
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_abexas.htm"
abapFile: "abenamdp_abexas.htm"
keywords: ["do", "if", "method", "class", "data", "types", "abenamdp", "abexas"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_language_external_data.htm) →  [ABAP Database Accesses](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_sql.htm) →  [AMDP - ABAP Managed Database Procedures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp.htm) → 

AMDP - Examples

Continue
![Example](exa.gif "Example") [AMDP, Implementation of a SQLScript Procedure](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_abexa.htm)
![Example](exa.gif "Example") [AMDP, Calling an AMDP Procedure from SQLScript](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_call_amdp_abexa.htm)
![Example](exa.gif "Example") [AMDP, Calling an SQLScript Procedure from AMDP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_call_abexa.htm)
![Example](exa.gif "Example") [AMDP, AMDP Methods in Interfaces and Superclasses](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_polymorphism_abexa.htm)
![Example](exa.gif "Example") [AMDP, SQL Script with Tabular CHANGING Parameter](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_changing_abexa.htm)
![Example](exa.gif "Example") [AMDP, AMDP Method with Specified Service Connection](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_connection_abexa.htm)
![Example](exa.gif "Example") [AMDP, Filling a Mesh with SQLScript](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_amdp_abexa.htm)
![Example](exa.gif "Example") [AMDP, Comparison of SQLScript with Open SQL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_vs_open_sql_abexa.htm)
![Example](exa.gif "Example") [AMDP, AMDP Functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_functions_abexa.htm)
![Example](exa.gif "Example") [AMDP, Access to ABAP Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_abap_types_abexa.htm)
![Example](exa.gif "Example") [AMDP, Access to Database Schemas](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_db_schema_abexa.htm)
![Example](exa.gif "Example") [AMDP, Implementation of an L Procedure](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_l_abexa.htm)